<resources>
    <string name="app_name">Libvis App</string>
    <string name="done">Done</string>
    <string name="tujuan">Tujuan</string>
    <string name="alamat">Alamat</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="tgl_kunjungan">Tgl Kunjungan</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="nama">Nama</string>
    <string name="type_your_name_here">Type your name here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="insert_with_full_name">insert with full name</string>
    <string name="inserting_exp_082">inserting example:082***</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="inserting_kampus_sekolah">Inserting Kampus/sekolah</string>
    <string name="inserting_your_adress">Inserting your address</string>
    <string name="what_youre_reason">what youre reason?</string>
    <string name="library_visitors">Library Visitors</string>
</resources>